Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19397

QtCreator clang code mode cannot parse system library.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.7.0-rc1
    • Qt Creator 4.5.0-rc1
    • C/C++/Obj-C++ Support
    • None
    • MacOs 10.13.1 (17B1003)

      Xcode Version 9.1 (9B55)

      Qt Creator 4.5.0-rc1 (4.4.83)

      Based on Qt 5.10.0 (Clang 7.0 (Apple), 64 bit)
      Built on Nov 21 2017 13:44:23

       

      Just create an simple cmake hello world project, and you can see this waring.

       

      I try to reinstall my Mac, and install qtcreator 4.6 , but it doesn't work.

       

      resource.h:196:2: error: unknown type name 'uint8_t'
      Socket.cpp:1:1: note: in file included from /Users/brambles/Workspace/websocket/Socket.cpp:1:
      Socket.cpp:3:10: note: in file included from /Users/brambles/Workspace/websocket/Socket.cpp:3:
      Socket.h:5:10: note: in file included from /Users/brambles/Workspace/websocket/Socket.h:5:
      EventEmitter.h:5:10: note: in file included from /Users/brambles/Workspace/websocket/EventEmitter.h:5:
      functional:484:10: note: in file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:484:
      typeinfo:61:10: note: in file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/typeinfo:61:
      exception:82:10: note: in file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/exception:82:
      ...
      stdlib.h:94:15: note: in file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/stdlib.h:94:
      stdlib.h:65:10: note: in file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/stdlib.h:65:
      wait.h:110:10: note: in file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/sys/wait.h:110:
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            yvvan Ivan Donchevskii
            bramblex qiao jian
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes